# fedora-notofonts

./: README.md  pyproject.toml
pyfednotofonts/: __init__.py  frondend.py  frontend.py  notorepos.py  subcommand.py
pyfednotofonts/subcommands/: download.py  genspec.py  github.py  list.py
